# PitchAura

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  quickstart.md
docs/api/: cognitive.md  space.md  sync.md  tactics.md  types.md  viz.md
docs/guides/: cognitive.md  pitch_control.md  sync.md  tactics.md  viz.md
scripts/: test_viz_real_data.py  viz_events_opta.py  viz_events_statsbomb.py  viz_gravity_extensions.py  viz_gravity_sdi_nsg.py
src/pitch_aura/: __init__.py  _grid.py  constants.py  types.py
src/pitch_aura/cognitive/: __init__.py  blind_spots.py  gravity_vision.py  vision_cone.py
src/pitch_aura/events/: __init__.py  passing_network.py  progressive.py  snapshot.py  zones.py
src/pitch_aura/io/: __init__.py  kloppy_adapter.py
src/pitch_aura/space/: __init__.py  _physics.py  kinematic.py  voronoi.py
src/pitch_aura/sync/: __init__.py  alignment.py  filters.py
src/pitch_aura/tactics/: __init__.py  gravity.py  line_breaking.py  passing_lanes.py  space_creation.py
src/pitch_aura/viz/: __init__.py  _pitch_draw.py  animation.py  events.py  heatmap.py  players.py  tactics.py  voronoi.py
tests/: conftest.py  test_grid.py  test_types.py
tests/test_cognitive/: test_blind_spots.py  test_gravity_vision.py  test_vision_cone.py
tests/test_events/: test_passing_network.py  test_progressive.py  test_snapshot.py  test_zones.py
tests/test_io/: test_kloppy_adapter.py  test_kloppy_events_enriched.py
tests/test_space/: test_kinematic.py  test_voronoi.py
tests/test_sync/: test_alignment.py  test_filters.py
tests/test_tactics/: test_gravity.py  test_line_breaking.py  test_passing_lanes.py  test_space_creation.py
tests/test_viz/: test_events_viz.py  test_viz.py
